# FinanceTracker

./: README.md  finance.db  simple_cli.py  start_app.py
SmartTaskTracker/: README.md  finance_data.json  pyproject.toml  replit.nix
SmartTaskTracker/attached_assets/: Pasted--FinanceControl--1744212153296.txt
SmartTaskTracker/finance_control/: database.py  models.py
attached_assets/: Pasted--FinanceControl--1744211737932.txt  Pasted--FinanceControl--1744211801164.txt
finance_control/: __init__.py  finance.db  main.py  reports.py  settings.py  views.py
